# Mailing_service

./: .env  .gitignore  README.md  pyproject.toml
clients/: admin.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_owner.py  0003_alter_client_options.py
clients/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py  views.py
config/forms/: forms.py
config/management/commands/: add_products.py  create_groups.py
config/templates/: contacts.html  home.html
config/templates/base_templates/: base.html
mailings/: admin.py  models.py  services.py  urls.py  views.py
mailings/management/commands/: send_mailing.py
mailings/migrations/: 0001_initial.py  0002_mailingattempt_recipient.py  0003_remove_mailingattempt_recipient.py  0004_mailingattempt_recipient.py  0005_mailing_owner.py  0006_alter_mailing_options_alter_mailingattempt_options.py
mailings/templates/mailings/: mailing_confirm_send.html  mailing_form.html  mailing_status.html  mailings_confirm_delete.html  mailings_detail.html  mailings_list.html
mailings/templatetags/: my_tags.py
messages_list/: admin.py  apps.py  models.py  urls.py  views.py
messages_list/migrations/: 0001_initial.py  0002_message_owner.py  0003_alter_message_options.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_token.py  0003_alter_customuser_phone_number.py  0004_alter_customuser_options.py
users/templatetags/: users_tags.py
(+12 files in other folders)
